Update - Change DB from Oracle to PostgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,22 @@
 #server.port=8440
 
 #DB Connection Postgresql
-#spring.datasource.url=jdbc:postgresql://localhost:5432/student
-#spring.datasource.username=postgres
-#spring.datasource.password=engineerings@123
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/drones
+spring.datasource.username=postgres
+spring.datasource.password=engineerings@123
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
 #DB Connection Oracle
-spring.datasource.url=jdbc:oracle:thin:@
-spring.datasource.username=system
-spring.datasource.password=manager
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:oracle:thin:@
+#spring.datasource.username=system
+#spring.datasource.password=manager
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 #Error Messages
 server.error.include-message=always
